# MooFeeder

./: .gitignore  README.md
Cloud/: build.gradle  (+1 more)
ControlBox/ControlBox/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CMakeLists.txt  CMakeLists.txt.user.bea64d8  ControlBox  ControlBox.pro  build.ninja  cmake_install.cmake  install_manifest.txt  main.cpp  qml.qrc  rasp  rasp.pub
ControlBox/ControlBox/.cmake/api/v1/reply.prev/: cache-v2-a23e7b28246cd92253cf.json  cmakeFiles-v1-f7c5ca37816ffdbe3288.json  codemodel-v2-c30607ea33f885fb4364.json  directory-.-Debug-851f51a57b6c103ebf6b.json  index-2023-10-27T20-43-54-0253.json  target-ControlBox-Debug-2986b07eafa5aadf94d5.json  target-ControlBox_autogen-Debug-e5180a435b0c247569cc.json  target-ControlBox_autogen_timestamp_deps-Debug-8fc2305e1da0ab010460.json
ControlBox/ControlBox/.qtc_clangd/: compile_commands.json
ControlBox/ControlBox/.qtc_clangd/.cache/clangd/index/: FILE.h.0FAEE5B2E5F3DCE9.idx  QEvent.06555EF9690418F1.idx  QGuiApplication.6C5CC4F04D237A64.idx  QMargins.830DF628789D9234.idx  QMatrix4x4.6D90A7FB0A021AC7.idx  QObject.E5CA91D36FCDE9A3.idx  QQmlApplicationEngine.1AEB2D92BFAA11BA.idx  QQmlContext.529C70802764804A.idx  QQuickView.A8F13E1B378CD910.idx  QRect.819D62706F078170.idx  QRectF.C711B4365FE284F0.idx  __FILE.h.C3624FA869597575.idx  __fpos64_t.h.57B49A67F851FB28.idx  __fpos_t.h.3B439F6CF73508EB.idx  __locale_t.h.FA84791179EB58C6.idx  __mbstate_t.h.9E90BAD8A5005982.idx  __sigset_t.h.64804203A7AC4247.idx  __stddef_max_align_t.h.D5B7CF18CABCEF7C.idx  algorithm.E6EC227E8ED2B742.idx  algorithmfwd.h.AE962B20B1F91E63.idx  align.h.B5D381C6E7629207.idx  aligned_buffer.h.4643C771A4A6DEE5.idx  alloc_traits.h.271291968709396D.idx  alloc_traits.h.7C919AE0EF6ACCDC.idx  alloca.h.DCF26265FB7CB0B7.idx  allocated_ptr.h.DBD5A16A9FA1278B.idx  allocator.h.900CD0B0EFAA0569.idx  array.46DC25A42B14DE17.idx  assert.h.D88F7E3534FB0A48.idx  assertions.h.1F7278DB613F8431.idx  atomic.DC3264E8C9E464B3.idx  atomic_base.h.A02CDD47F0CD290E.idx  (+380 more)
ControlBox/ControlBox/ControlBox/: control_box.cpp  control_box.h
ControlBox/ControlBox/ControlBox_autogen/: deps  mocs_compilation.cpp
ControlBox/ControlBox/ControlBox_autogen/3EWJWP7WKK/: moc_cqmlinterface.cpp  moc_cqmlinterface.cpp.d
ControlBox/ControlBox/ControlBox_autogen/EWIEGA46WW/: qrc_qml.cpp
ControlBox/ControlBox/Util/: http_util.cpp  http_util.h
ControlBox/ControlBox/cpp/inc/: cloudinfo.h  cloudtypes.h
ControlBox/ControlBox/cpp/inc/app/: cstationmanager.h  station_types.h
ControlBox/ControlBox/cpp/inc/entities/: ccalf.h  ccontrolbox.h  cfeedingstation.h  clog.h  cserializableobject.h
ControlBox/ControlBox/cpp/inc/gui/: cfeedingstation.h  cguimenu.h  cloginmenu.h  cmainmenu.h  cmonitormenu.h  cqmlinterface.h  csettingsmenu.h  cstationmenu.h
ControlBox/ControlBox/cpp/inc/oswrapper/: oswrapper.h
ControlBox/ControlBox/cpp/inc/ptwrapper/: clockguard.h  cmutex.h  cthread.h
ControlBox/ControlBox/cpp/inc/serial/: serial.h
ControlBox/ControlBox/cpp/inc/strlib/: strlib.h
ControlBox/ControlBox/cpp/inc/util/: chttpform.h  chttprequest.h  cnetworkmanager.h  csafequeue.hpp  hexutil.h  networktypes.h  util.h
ControlBox/ControlBox/cpp/src/: main.cpp
ControlBox/ControlBox/cpp/src/app/: cstationmanager.cpp
ControlBox/ControlBox/cpp/src/entities/: ccalf.cpp  ccontrolbox.cpp  cfeedingstation.cpp  clog.cpp  cserializableobject.cpp
ControlBox/ControlBox/cpp/src/gui/: cguimenu.cpp  cloginmenu.cpp  cmainmenu.cpp  cmonitormenu.cpp  cqmlinterface.cpp  csettingsmenu.cpp  cstationmenu.cpp
ControlBox/ControlBox/cpp/src/oswrapper/: oswrapper.cpp
ControlBox/ControlBox/cpp/src/ptwrapper/: clockguard.cpp  cmutex.cpp  cthread.cpp  cuniquelock.cpp
ControlBox/ControlBox/cpp/src/serial/: serial.cpp
ControlBox/ControlBox/cpp/src/strlib/: strlib.cpp
ControlBox/ControlBox/cpp/src/util/: chttpform.cpp  chttprequest.cpp  cnetworkmanager.cpp  hexutil.cpp  util.cpp
ControlBox/ControlBox/qml/: BoxMenu.qml  LoginMenu.qml  Main.qml  MainMenu.qml  MonitorMenu.qml  SettingsMenu.qml  StationMenu.qml  Types.qml
ControlBox/ControlBox/qml/Components/: BreakBar.qml  CalfDelegate.qml  MenuButton.qml  RoundedButton.qml  StationDelegate.qml  SwipeListener.qml  TextIcon.qml
Host/LoRa/: CMakeLists.txt  main.cpp
Host/LoRa/app/client/src/: app_client.cpp
Host/LoRa/app/common/inc/: app_types.h  app_util.h
Host/LoRa/app/common/src/: app_util.c
Host/LoRa/app/server/src/: app_server.cpp
Host/LoRa/common/inc/: lora_timmings.h  oswrap.h
Host/LoRa/mac/client/src/: mac_client.cpp
Host/LoRa/mac/common/inc/: lora_timmings.h  mac_types.h  mac_util.h
Host/LoRa/mac/common/src/: mac_util.c
Host/LoRa/mac/server/inc/: cloramac.h
Host/LoRa/mac/server/src/: cloramac.cpp
Host/LoRa/network/client/inc/: network_client.h
Host/LoRa/network/common/inc/: network_types.h
Host/LoRa/network/server/inc/: cloranetwork.h
Host/LoRa/network/server/src/: cloranetwork.cpp
Host/LoRa/oswrapper/inc/: oswrapper.h
Host/LoRa/oswrapper/src/: oswrapper.cpp
Host/LoRa/phy/inc/: phy_types.h
Host/LoRa/ptwrap/inc/: csemaphore.h  cthread.h
Host/LoRa/ptwrap/src/: cmutex.cpp  csemaphore.cpp  cthread.cpp  cuniquelock.cpp
Host/LoRa/queue/inc/: queue.hpp
Host/LoRa/rn2483/inc/: rn2483.h  rn2483_commands.h  rn2483_types.h
Host/LoRa/rn2483/src/: rn4283.c
Host/LoRa/serial/inc/: serial.h  serial_types.h
Host/LoRa/serial/src/: serial.c
Host/LoRa/strlib/inc/: strlib.h
Host/LoRa/strlib/src/: strlib.c
Host/SerializableObjects/: CControlBox.cpp  CControlBox.h  CMakeLists.txt  http.hpp  main.cpp
Host/SerializableObjects/CSerializableObject/: CSerializableObject.cpp  CSerializableObject.h
Host/YRM1003/: CMakeLists.txt  main.c
Host/YRM1003/adhoc/inc/: yrm100x_tu.h
Host/YRM1003/adhoc/src/: yrm100x_tu_getregion.c  yrm100x_tu_init.c  yrm100x_tu_read.c  yrm100x_tu_setgetregion.c  yrm100x_tu_setregion.c
Host/YRM1003/platform/inc/: platform.h
Host/YRM1003/serial/inc/: serial.h  serial_types.h
Host/YRM1003/serial/src/: serial.c
Host/YRM1003/yrm100x/inc/: yrm100x.h
Host/YRM1003/yrm100x/src/: yrm100x.c
(+184 files in other folders)
